--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link href="Testing.styles.css" rel="stylesheet" /> -->
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" /><link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+<!-- Important: Increment the version parameter whenever you update MudBlazor to prevent caching issues -->
+<link href="_content/MudBlazor/MudBlazor.min.css?v=1" rel="stylesheet" />
 </head>
 
 <body>
@@ -29,6 +31,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+	<script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
